Fixing Project Spacing

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ b {
     text-align: center;
 }
 
-.projectIcon {
+.projectIcon  {
     width: 100%;
     max-width: 1000px;
 }
@@ -192,7 +192,7 @@ b {
 }
 
 @media (max-width: 768px) {
-    #accedoIcon, #opentextIcon, #projectIcon {
+    #accedoIcon, #opentextIcon {
         margin: 5vh 0;
     }
     
